--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,101 @@
+absl-py==2.4.0
+blinker==1.4
+cffi==1.15.0
+clingo==5.6.1
+contourpy==1.3.2
+cryptography==3.4.8
+cuda-bindings==12.9.4
+cuda-pathfinder==1.4.0
+cycler==0.12.1
+dblatex==0.3.12
+dbus-python==1.2.18
+distro==1.7.0
+filelock==3.24.3
+fonttools==4.61.1
+fsspec==2026.2.0
+grpcio==1.78.0
+gyp==0.1
+httplib2==0.20.2
+importlib-metadata==4.6.4
+jeepney==0.7.1
+Jinja2==3.1.6
+joblib==1.5.3
+keyring==23.5.0
+kiwisolver==1.4.9
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
+Markdown==3.10.2
+MarkupSafe==3.0.3
 matplotlib==3.10.8
-numpy==2.4.2
-onnx==1.20.1
-opencv_python==4.13.0.92
-pandas==3.0.1
-Pillow==12.1.1
-scikit_learn==1.8.0
-scipy==1.17.1
+mercurial==6.1.1
+mlnx-tools==5.8.2.0.3.0
+more-itertools==8.10.0
+mpmath==1.3.0
+netaddr==0.7.19
+netifaces==0.11.0
+networkx==3.4.2
+numpy==2.2.6
+nvidia-cublas-cu12==12.8.4.1
+nvidia-cuda-cupti-cu12==12.8.90
+nvidia-cuda-nvrtc-cu12==12.8.93
+nvidia-cuda-runtime-cu12==12.8.90
+nvidia-cudnn-cu12==9.10.2.21
+nvidia-cufft-cu12==11.3.3.83
+nvidia-cufile-cu12==1.13.1.3
+nvidia-curand-cu12==10.3.9.90
+nvidia-cusolver-cu12==11.7.3.90
+nvidia-cusparse-cu12==12.5.8.93
+nvidia-cusparselt-cu12==0.7.1
+nvidia-nccl-cu12==2.27.5
+nvidia-nvjitlink-cu12==12.8.93
+nvidia-nvshmem-cu12==3.4.5
+nvidia-nvtx-cu12==12.8.90
+oath==1.4.3
+oauthlib==3.2.0
+opencv-python==4.13.0.92
+packaging==26.0
+pandas==2.3.3
+pexpect==4.8.0
+pillow==12.1.1
+ply==3.11
+protobuf==7.34.0
+ptyprocess==0.7.0
+py==1.10.0
+PyAudio==0.2.11
+pycairo==1.20.1
+pycparser==2.21
+pycryptodomex==3.11.0
+PyGObject==3.42.1
+PyJWT==2.3.0
+pyparsing==3.3.2
+python-apt==2.4.0+ubuntu4
+python-dateutil==2.9.0.post0
+python-hostlist==1.21
+python-magic==0.4.24
+python3-hwloc==2.3.13.0.1.11.9
+python3-libnuma==2.3.7
+pytz==2025.2
+pyzmq==23.2.0
+qluman==13.7.1
+qlunet==13.0.22
+scikit-learn==1.7.2
+scipy==1.15.3
+SecretStorage==3.3.1
+six==1.16.0
+sympy==1.14.0
+tensorboard==2.20.0
+tensorboard-data-server==0.7.2
 tensorrt==10.15.1.29
-tensorrt_cu13==10.15.1.29
-torch==2.10.0+cu130
-torchvision==0.25.0+cu130
+tensorrt-cu13==10.15.1.29
+tensorrt_cu13_bindings==10.15.1.29
+tensorrt_cu13_libs==10.15.1.29
+threadpoolctl==3.6.0
+torch==2.10.0
+torchvision==0.25.0
+triton==3.6.0
+typing_extensions==4.15.0
+tzdata==2025.3
+wadllib==1.3.6
+Werkzeug==3.1.6
+zipp==1.0.0
